# backtester

./: README.md  pyproject.toml
ML/: auto_ts_test.py  feature_importance_guide.md  ml_cad_oas_changelog.md  ml_cad_oas_monthly.py  ml_cad_oas_monthly_v2.py
Outputs/: backtest_infra.html  cad_oas_predictor.joblib  strategy_17_tearsheet_20250131_142758.html
config/: backtest_config.yaml  config.yaml  logging_config.yaml  optimized_config.yaml
data/: derivatives_data.csv  derv_data.csv  er_ytd_data.csv  sprds_data.csv  spreads_data.csv
data_pipelines/: data_pipeline.py
example_notebooks/: bloomberg_data_examples.ipynb  test_config_data_fetching.ipynb
example_scripts/: backtest_runner.py  run_backtest.py  strategy_0_buy_and_hold.py  strategy_1_momentum.py  strategy_2_regime.py  strategy_3_mean_reversion.py  strategy_4_multi_factor.py  strategy_5_volatility_regime.py  strategy_6_adaptive_trend.py  strategy_7_ml_ensemble.py  strategy_8_combined.py  strategy_analysis.py  strategy_framework.py  test_bloomberg_direct.py  test_csv_exporter.py  test_vectorbt_metrics.py
general_notes/: backtesting.md  faml.md  notes.md
llm_reference/: CHANGELOG.md  ytd.md
notebooks/: analyze_bloomberg_data.ipynb  backtest_analysis.ipynb  backtest_vector.ipynb  best_model_pt.pth  daily vixly 1.ipynb  data_pipe_class_test.ipynb  er_ytd_index_test.ipynb  exploring_returns.ipynb  gemini strategy.ipynb  monthly_sprds_predict.ipynb  replicate_strategies.ipynb  sprd_analytics.ipynb  test_csv_reader.py  vector_bt.ipynb  windsurf backtest with getting data from csv.ipynb  ytd.ipynb
(+45 files in other folders)
